Arrows 'z-index' bug fixed

--- a/styles/MoviesList.module.css
+++ b/styles/MoviesList.module.css
@@ -37,7 +37,7 @@
     align-items: center;
     background-color: rgba(0, 0, 0, 0.4);
     height: 100%;
-    z-index: 10;
+    z-index: 5;
     transition: background-color 0.2s;
 }
 
